Added diagnostics in case Mathematica is absent. Fixed status check for Mathematica variables
 Changes to be committed:
	modified:   Backends/include/gambit/Backends/backend_info.hpp
	modified:   Backends/include/gambit/Backends/backend_macros.hpp
	modified:   Backends/include/gambit/Backends/mathematica_macros.hpp
	modified:   CMakeLists.txt
	modified:   Core/src/core.cpp
	modified:   Core/src/depresolver.cpp
	modified:   Core/src/diagnostics.cpp
	modified:   Elements/include/gambit/Elements/functors.hpp
	modified:   Elements/src/ini_functions.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,7 +221,7 @@ if(Mathematica_FOUND)
       set(HAVE_MATHEMATICA 0)
     endif()
   else()
-    message("${BoldRed}   Missing library libuuid required for WSTP. Backends using Mathematica will be disabled.${ColourReset}")
+    message("${BoldRed}   Missing library libuuid required for WSTP. Mathematica will be disabled.${ColourReset}")
     set(HAVE_MATHEMATICA 0)
   endif()
 else()
