--- a/yaml_files/ColliderBit_CMSSM.yaml
+++ b/yaml_files/ColliderBit_CMSSM.yaml
@@ -328,10 +328,13 @@ Rules:
   - capability: DetAnalysisContainer
     function: getDetAnalysisContainer
     options:
-      analyses: [ ["ATLAS_0LEP_20invfb","ATLAS_0LEPStop_20invfb",
-                   "ATLAS_1LEPStop_20invfb","ATLAS_2bStop_20invfb",
-                   "ATLAS_2LEPEW_20invfb","ATLAS_2LEPStop_20invfb",
-                   "ATLAS_3LEPEW_20invfb"],
+      analyses: [ ["ATLAS_8TeV_0LEP_20invfb",
+                   "ATLAS_8TeV_0LEPStop_20invfb",
+                   "ATLAS_8TeV_1LEPStop_20invfb",
+                   "ATLAS_8TeV_2bStop_20invfb",
+                   "ATLAS_8TeV_2LEPEW_20invfb",
+                   "ATLAS_8TeV_2LEPStop_20invfb",
+                   "ATLAS_8TeV_3LEPEW_20invfb"],
                    [] ]
 
   # Specify the list of ATLAS analyses to run with BuckFast
@@ -339,10 +342,13 @@ Rules:
   - capability: ATLASAnalysisContainer
     function: getATLASAnalysisContainer
     options:
-      analyses: [ ["ATLAS_0LEP_20invfb","ATLAS_0LEPStop_20invfb",
-                   "ATLAS_1LEPStop_20invfb","ATLAS_2bStop_20invfb",
-                   "ATLAS_2LEPEW_20invfb","ATLAS_2LEPStop_20invfb",
-                   "ATLAS_3LEPEW_20invfb"],
+      analyses: [ ["ATLAS_8TeV_0LEP_20invfb",
+                   "ATLAS_8TeV_0LEPStop_20invfb",
+                   "ATLAS_8TeV_1LEPStop_20invfb",
+                   "ATLAS_8TeV_2bStop_20invfb",
+                   "ATLAS_8TeV_2LEPEW_20invfb",
+                   "ATLAS_8TeV_2LEPStop_20invfb",
+                   "ATLAS_8TeV_3LEPEW_20invfb"],
                   ["ATLAS_13TeV_0LEP_13invfb"] ]
 
   # Specify the list of CMS analyses to run with BuckFast
@@ -350,8 +356,10 @@ Rules:
   - capability: CMSAnalysisContainer
     function: getCMSAnalysisContainer
     options:
-      analyses: [ ["CMS_1LEPDMTOP_20invfb","CMS_2LEPDMTOP_20invfb",
-                   "CMS_3LEPEW_20invfb","CMS_MONOJET_20invfb"],
+      analyses: [ ["CMS_8TeV_1LEPDMTOP_20invfb",
+                   "CMS_8TeV_2LEPDMTOP_20invfb",
+                   "CMS_8TeV_3LEPEW_20invfb",
+                   "CMS_8TeV_MONOJET_20invfb"],
                   [] ]
 
   # Specify the list of identity analyses to run
@@ -359,11 +367,18 @@ Rules:
   - capability: IdentityAnalysisContainer
     function: getIdentityAnalysisContainer
     options:
-      analyses: [ [ "ATLAS_0LEP_20invfb","ATLAS_0LEPStop_20invfb",
-                    "ATLAS_1LEPStop_20invfb","ATLAS_2bStop_20invfb",
-                    "ATLAS_2LEPEW_20invfb","ATLAS_2LEPStop_20invfb",
-                    "ATLAS_3LEPEW_20invfb","CMS_1LEPDMTOP_20invfb","CMS_2LEPDMTOP_20invfb",
-                    "CMS_3LEPEW_20invfb","CMS_MONOJET_20invfb"], [] ]
+      analyses: [ [ "ATLAS_8TeV_0LEP_20invfb",
+                    "ATLAS_8TeV_0LEPStop_20invfb",
+                    "ATLAS_8TeV_1LEPStop_20invfb",
+                    "ATLAS_8TeV_2bStop_20invfb",
+                    "ATLAS_8TeV_2LEPEW_20invfb",
+                    "ATLAS_8TeV_2LEPStop_20invfb",
+                    "ATLAS_8TeV_3LEPEW_20invfb",
+                    "CMS_8TeV_1LEPDMTOP_20invfb",
+                    "CMS_8TeV_2LEPDMTOP_20invfb",
+                    "CMS_8TeV_3LEPEW_20invfb",
+                    "CMS_8TeV_MONOJET_20invfb"],
+                    [] ]
 
 
     # Use lognormal errors when marginalising the LHC Poisson likelihoods over systematic uncertainties
