--- a/yaml_files/ColliderBit_CMSSM.yaml
+++ b/yaml_files/ColliderBit_CMSSM.yaml
@@ -327,11 +327,7 @@ Rules:
   - capability: DetAnalysisContainer
     function: getDetAnalysisContainer
     options:
-      analyses: [ ["ATLAS_0LEP_20invfb","ATLAS_0LEPStop_20invfb",
-                   "ATLAS_1LEPStop_20invfb","ATLAS_2bStop_20invfb",
-                   "ATLAS_2LEPEW_20invfb","ATLAS_2LEPStop_20invfb",
-                   "ATLAS_3LEPEW_20invfb"],
-                   [] ]
+      analyses: [ [], [] ]
 
   # Specify the list of ATLAS analyses to run with BuckFast
   # These will get run if BuckFast is turned on
@@ -341,8 +337,8 @@ Rules:
       analyses: [ ["ATLAS_0LEP_20invfb","ATLAS_0LEPStop_20invfb",
                    "ATLAS_1LEPStop_20invfb","ATLAS_2bStop_20invfb",
                    "ATLAS_2LEPEW_20invfb","ATLAS_2LEPStop_20invfb",
-                   "ATLAS_3LEPEW_20invfb","ATLAS_1LEPbb_20invfb"],
-                  ["ATLAS_13TeV_0LEP_13invfb"] ]
+                   "ATLAS_3LEPEW_20invfb","ATLAS_8TeV_1LEPbb_20invfb"],
+                  ["ATLAS_13TeV_0LEP_13invfb", "ATLAS_13TeV_MultiLEP_36invfb"] ]
 
   # Specify the list of CMS analyses to run with BuckFast
   # These will get run if BuckFast is turned on
@@ -358,11 +354,7 @@ Rules:
   - capability: IdentityAnalysisContainer
     function: getIdentityAnalysisContainer
     options:
-      analyses: [ [ "ATLAS_0LEP_20invfb","ATLAS_0LEPStop_20invfb",
-                    "ATLAS_1LEPStop_20invfb","ATLAS_2bStop_20invfb",
-                    "ATLAS_2LEPEW_20invfb","ATLAS_2LEPStop_20invfb",
-                    "ATLAS_3LEPEW_20invfb","CMS_1LEPDMTOP_20invfb","CMS_2LEPDMTOP_20invfb",
-                    "CMS_3LEPEW_20invfb","CMS_MONOJET_20invfb"], [] ]
+      analyses: [ [], [] ]
 
 
     # Use lognormal errors when marginalising the LHC Poisson likelihoods over systematic uncertainties
