--- a/yaml_files/SN_dev.yaml
+++ b/yaml_files/SN_dev.yaml
@@ -2,6 +2,15 @@
 
 Parameters:
 
+  # SM parameters.
+  StandardModel_SLHA2: !import include/StandardModel_SLHA2_defaults.yaml
+
+  # Higgs bosom parameters
+  StandardModel_Higgs:
+    mH:
+      range: [124.1, 127.3]
+
+  # Sterile Neutrino Parameters
   SN_dev:
     M_1:
       range: [0.06, 500]
@@ -64,7 +73,7 @@ Scanner:
 
   scanners:
     multinest:
-      plugin: MultiNest
+      plugin: multinest
       like: LogLike
       nlive: 700
 
