Fixed bug in HDF5 combine tools where it would fail to combine if same auxilliary parameters were found in multiple temporary files. Affected t-walk scanner, whose output now combines successfully.

--- a/yaml_files/ScannerBit.yaml
+++ b/yaml_files/ScannerBit.yaml
@@ -47,7 +47,7 @@ Scanner:
   # This tag specifies which plugin to use as the scanner.
   # Here the multinest scanner is choosen, but you could
   # choose any scanner defined under the scanners section
-  use_scanner: multinest #twalk
+  use_scanner: twalk
 
   scanners:
 
