--- a/yaml_files/ColliderBit_Validation_ATLAS_8TeV_1LEPbb_20invfb.yaml
+++ b/yaml_files/ColliderBit_Validation_ATLAS_8TeV_1LEPbb_20invfb.yaml
@@ -231,7 +231,7 @@ Rules:
   - capability:  ColliderOperator
     function: operateLHCLoop
     options:
-      nEvents: [0,1000000]
+      nEvents: [1000000, 100000]
       pythiaNames: ["Pythia_SUSY_LHC_8TeV", "Pythia_SUSY_LHC_13TeV"]
       silenceLoop: false
 
@@ -246,27 +246,30 @@ Rules:
       ### Pythia_doc_path defaults to the xmldoc directory of the default Pythia
       ###   backend. So, this must only be set if the user chooses a different Pythia.
       #Pythia_doc_path: "Backends/installed/Pythia/8.212/share/Pythia8/xmldoc/"
-      Pythia_SUSY_LHC_8TeV: []
-      Pythia_SUSY_LHC_13TeV: ["Print:quiet = on",
+      Pythia_SUSY_LHC_8TeV: ["Print:quiet = on",
                              "PartonLevel:MPI = off",
                              "PartonLevel:ISR = on",
                              "PartonLevel:FSR = off",
                              "HadronLevel:all = on",
                              "SUSY:all = off",
-                             "SUSY:qqbar2chi+-chi0 = on"
+                             "SUSY:qqbar2chi+-chi0 = on",
                              "SUSY:idA = 1000023",
                              "SUSY:idB = 1000024",
+                             "TauDecays:mode = 0"]
+      Pythia_SUSY_LHC_13TeV: ["Print:quiet = on",
+                             "PartonLevel:MPI = off",
+                             "PartonLevel:ISR = on",
+                             "PartonLevel:FSR = off",
+                             "HadronLevel:all = on",
+                             "SUSY:all = on",
                              "TauDecays:mode = 0"]
       # Don't bother generating events if the estimated upper limit on the cross-section is below this value [fb].
       # (The cross-section values 0.048 fb and 0.075 fb correspond to ~1 expected event at L = 20.7 fb^-1 and L = 13.3 fb^-1, respectively.)
       xsec_vetos: [0.048, 0.075]
 
       # Option needed if you want to use the getPythiaFileReader
-      #SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_200_100.slha"]
-      #SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_400_200.slha"]
-      #SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_500_100.slha"]
-      #SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_300_150.slha"]
-      SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_800_600.slha"]
+      SLHA_filenames: ["ColliderBit/data/ATLAS_8TeV_1LEPbb_20invfb_250_0.slha"] 
+      #SLHA_filenames: ["ColliderBit/data/ATLAS_8TeV_1LEPbb_20invfb_130_0.slha"]
 
   # Delphes rules and options (ex. the Delphes configuration card file)
   # NOTE: The use of Delphes currently only works when running with OMP_NUM_THREADS=1
@@ -285,7 +288,7 @@ Rules:
     function: getBuckFastATLAS
     options:
       # useDetector defaults to true for getBuckFastATLAS. Set it to false to ignore all ATLAS analyses and disable the BuckFast ATLAS simulator
-      useDetector: [false,true]
+      useDetector: [true,false]
       # Choose which type of event to use: for parton level, change partonOnly to true
       partonOnly: [false,false]
       antiktR: [0.4,0.4]
@@ -325,7 +328,7 @@ Rules:
   - capability: ATLASAnalysisContainer
     function: getATLASAnalysisContainer
     options:
-      analyses: [ [], ["ATLAS_13TeV_MultiLEP_36invfb"] ]
+      analyses: [ ["ATLAS_8TeV_1LEPbb_20invfb"], [] ]
 
   # Specify the list of CMS analyses to run with BuckFast
   # These will get run if BuckFast is turned on
@@ -377,4 +380,4 @@ KeyValues:
 
     # Set the default output path
 
-  default_output_path: "runs/ColliderBit_Validation_ATLAS_13TeV_MultiLEP_36invfb/"
+  default_output_path: "runs/ColliderBit_Validation_ATLAS_8TeV_1LEPbb_20invfb/"
