--- a/yaml_files/ColliderBit_Validation_CMS_13TeV_1LEPbb_36invfb.yaml
+++ b/yaml_files/ColliderBit_Validation_CMS_13TeV_1LEPbb_36invfb.yaml
@@ -1,19 +1,7 @@
-##########################################################################
-## GAMBIT configuration for running a MultiNest scan of the CMSSM using
-## only ColliderBit likelihoods (LHC and LEP particle searches, LHC and LEP
-## Higgs data).
-##
-## SM nuisance parameters are fixed to default values, and no astrophysical
-## nuisance parameters are used. See the ColliderBit paper for more details.
-##########################################################################
-
-
 Parameters:
 
-  # SM nuisance parameters fixed for now.
   StandardModel_SLHA2: !import include/StandardModel_SLHA2_defaults.yaml
 
-  # CMSSM parameter ranges and priors
   CMSSM:
     M0: 70
     M12: 350
@@ -23,25 +11,13 @@ Parameters:
 
 Priors:
 
-  # All priors simple, so specified in Parameters section
-
-
 Printer:
-
-  # These lines tell GAMBIT to use the hdf5 printer
-  # Can switch to the ascii printer by commenting out and
-  # using the ascii lines below
 
   printer: hdf5
   options:
     output_file: "CMSSM.hdf5"
     group: "/CMSSM"
     delete_file_on_restart: true
-
-  #printer: ascii
-  #options:
-  #  output_file: "gambit_output.txt"
-
 
 Scanner:
 
@@ -66,8 +42,6 @@ Scanner:
 
 ObsLikes:
 
-    # Calculate SM quantities
-
     - capability: lnL_t_mass
       purpose:    LogLike
 
@@ -89,7 +63,6 @@ ObsLikes:
     - capability: lnL_deltarho
       purpose:    LogLike
 
-    # Calculate the LHC likelihood
     - purpose:    LogLike
       capability: LHC_Combined_LogLike
 
@@ -100,7 +73,6 @@ ObsLikes:
       capability: MSSM_spectrum
       type:       map_str_dbl
 
-    # Calculate the LEP likelihoods
     - purpose:    LogLike
       capability: ALEPH_Selectron_LLike
 
@@ -146,28 +118,20 @@ ObsLikes:
     - purpose:    LogLike
       capability: OPAL_Neutralino_Hadronic_LLike
 
-    # Calculate the LEP Higgs likelihood
-
     - purpose:    LogLike
       capability: LEP_Higgs_LogLike
-
-    # Calculate the LHC Higgs likelihood
 
     - purpose:    LogLike
       capability: LHC_Higgs_LogLike
 
 Rules:
 
-  # Choose to get decays from DecayBit proper, not from an SLHA file.
   - capability: decay_rates
     function: all_decays
 
-  # Choose to get the spectrum from SpecBit proper, not an SLHA file.
   - capability: unimproved_MSSM_spectrum
     function: get_CMSSM_spectrum
     options:
-      # Set to match benchmark point specified in
-      # SpecBit/MSSM_benchmark_points/LesHouches.in.MSSM_1
       precision_goal:        1.0e-4
       max_iterations:        0
       calculate_sm_masses:   false
@@ -181,19 +145,14 @@ Rules:
       use_higgs_2loop_atau_atau: true
       invalid_point_fatal: false
 
-  # Choose where to get the precision spectrum from
   - capability: MSSM_spectrum
     type: Spectrum
     function: make_MSSM_precision_spectrum_none
 
-  # These options set various tolerances in the spectrum generation
   - options:
       gauge_mixing_tolerance: 0.5
       family_mixing_tolerance: 0.5
-      #gauge_mixing_tolerance_invalidates_point_only: false
-      #family_mixing_tolerance_invalidates_point_only: false
 
-  # Choose to use functions that get Higgs decays from SUSY-HIT, and t decays from DecayBit native implementation (instead of FeynHiggs)
   - capability: Reference_SM_Higgs_decay_rates
     function: Ref_SM_Higgs_decays_table
   - capability: Reference_SM_other_Higgs_decay_rates
@@ -211,41 +170,19 @@ Rules:
   - capability: t_decay_rates
     function: t_decays
 
- # Choose where to get the Higgs couplings from
   - capability: Higgs_Couplings
     function: MSSM_higgs_couplings_pwid
 
-  ##### LHC Detector and Analysis rules #####
-  #
-  # The current capability structure allows for the user to mix'n'match
-  # collider settings, detector sims and analyses. The user may run BuckFastATLAS
-  # with ATLAS analyses, BuckFastCMS with CMS analyses, and Delphes with any analyses,
-  # for various configurations of Pythia.
-  #
-  # The way to turn the detectors on or off is via the boolean option useDetector for
-  # the module functions getDelphes, getBuckFastATLAS and getBuckFastCMS.
-  #
-  # NOTE: The use of Delphes currently only works when running with OMP_NUM_THREADS=1
-
-  # Choose number of events, and the type of Pythia object to run (this example here runs a SUSY example, which is what we want)
   - capability:  ColliderOperator
     function: operateLHCLoop
     options:
-      nEvents: [0,1000000]
+      nEvents: [0, 1000000]
       pythiaNames: ["Pythia_SUSY_LHC_8TeV", "Pythia_SUSY_LHC_13TeV"]
       silenceLoop: false
 
-  # Choose which getPythia to use
-  # For a scan, we use the one that does not expect an input SLHA file (i.e. do not use getPythiaFileReader)
-  # To run on an SLHA file, change "getPythia" to "getPythiaFildeReader" below, the uncomment the SLHA_filenames line
-  # Note that you must specify the path to the xmldoc
-  # Note also that you can use normal Pythia options here
   - capability:  HardScatteringSim
     function:  getPythiaFileReader
     options:
-      ### Pythia_doc_path defaults to the xmldoc directory of the default Pythia
-      ###   backend. So, this must only be set if the user chooses a different Pythia.
-      #Pythia_doc_path: "Backends/installed/Pythia/8.212/share/Pythia8/xmldoc/"
       Pythia_SUSY_LHC_8TeV: []
       Pythia_SUSY_LHC_13TeV: ["Print:quiet = on",
                              "PartonLevel:MPI = off",
@@ -253,103 +190,69 @@ Rules:
                              "PartonLevel:FSR = off",
                              "HadronLevel:all = on",
                              "SUSY:all = off",
-                             "SUSY:qqbar2chi+-chi0 = on"
+                             "SUSY:qqbar2chi+-chi0 = on",
                              "SUSY:idA = 1000023",
                              "SUSY:idB = 1000024",
                              "TauDecays:mode = 0"]
-      # Don't bother generating events if the estimated upper limit on the cross-section is below this value [fb].
-      # (The cross-section values 0.048 fb and 0.075 fb correspond to ~1 expected event at L = 20.7 fb^-1 and L = 13.3 fb^-1, respectively.)
       xsec_vetos: [0.048, 0.075]
 
-      # Option needed if you want to use the getPythiaFileReader
-      #SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_200_100.slha"]
-      #SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_400_200.slha"]
-      #SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_500_100.slha"]
-      #SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_300_150.slha"]
-      SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_800_600.slha"]
+      SLHA_filenames: ["ColliderBit/data/CMS_13TeV_Test.slha"] 
 
-  # Delphes rules and options (ex. the Delphes configuration card file)
-  # NOTE: The use of Delphes currently only works when running with OMP_NUM_THREADS=1
   - capability: DetectorSim
     type: "Gambit::ColliderBit::DelphesVanilla"
     function: getDelphes
     options:
-      # useDetector defaults to false for getDelphes, which ignores all "Det" analyses and disables Delphes
       useDetector: [false,false]
-      # Specify the location of the Delphes cards for the two Pythia instances (we assume ATLAS in both cases here)
       delphesConfigFiles: ["ColliderBit/data/delphes_card_ATLAS.tcl","ColliderBit/data/delphes_card_ATLAS.tcl"]
 
-  # BuckFast for ATLAS rules and options
   - capability: SimpleSmearingSim
     type: "Gambit::ColliderBit::BuckFastSmearATLAS"
     function: getBuckFastATLAS
     options:
-      # useDetector defaults to true for getBuckFastATLAS. Set it to false to ignore all ATLAS analyses and disable the BuckFast ATLAS simulator
-      useDetector: [false,true]
-      # Choose which type of event to use: for parton level, change partonOnly to true
+      useDetector: [false,false]
       partonOnly: [false,false]
       antiktR: [0.4,0.4]
 
-  # BuckFast for CMS rules and options
   - capability: SimpleSmearingSim
     type: "Gambit::ColliderBit::BuckFastSmearCMS"
     function: getBuckFastCMS
     options:
-      # useDetector defaults to true for getBuckFastCMS. Set it to false to ignore all CMS analyses and disable the BuckFast CMS simulator
-      useDetector: [false,false]
-      # Choose which type of event to use: for parton level, change partonOnly to true
+      useDetector: [false,true]
       partonOnly: [false,false]
       antiktR: [0.4,0.4]
 
-  # Identity BuckFast rules and options (ex. the jet radius)
   - capability: SimpleSmearingSim
     type: "Gambit::ColliderBit::BuckFastIdentity"
     function: getBuckFastIdentity
     options:
-      #useDetector defaults to false for getBuckFastIdentity, which ignores all "Identity" analyses and disables the BuckFast Identity "simulator".
       useDetector: [false,false]
-      # Choose which type of event to use: for parton level, change partonOnly to true
       partonOnly: [false,false]
       antiktR: [0.4,0.4]
 
-
-  # Specify the list of analyses to run after Delphes performs detector simulation
-  # NOTE: The use of Delphes currently only works when running with OMP_NUM_THREADS=1
   - capability: DetAnalysisContainer
     function: getDetAnalysisContainer
     options:
       analyses: [ [], [] ]
 
-  # Specify the list of ATLAS analyses to run with BuckFast
-  # These will get run if BuckFast is turned on
   - capability: ATLASAnalysisContainer
     function: getATLASAnalysisContainer
     options:
-      analyses: [ [], ["ATLAS_13TeV_MultiLEP_36invfb"] ]
+      analyses: [ [], [] ]
 
-  # Specify the list of CMS analyses to run with BuckFast
-  # These will get run if BuckFast is turned on
   - capability: CMSAnalysisContainer
     function: getCMSAnalysisContainer
     options:
-      analyses: [ [], [] ]
+      analyses: [ [], ["CMS_13TeV_1LEPbb_36invfb"] ]
 
-  # Specify the list of identity analyses to run
-  # These will be run if the identity simulation is turned on
   - capability: IdentityAnalysisContainer
     function: getIdentityAnalysisContainer
     options:
       analyses: [ [], [] ]
 
-
-    # Use lognormal errors when marginalising the LHC Poisson likelihoods over systematic uncertainties
-    # Can change "_lognormal_" to "_gaussian_" if you prefer
   - capability: LHC_Combined_LogLike
     backends:
     - {capability: lnlike_marg_poisson_lognormal_error}
 
-
-    # Set the names of key log files
 
 Logger:
 
@@ -369,12 +272,8 @@ KeyValues:
   dependency_resolution:
     prefer_model_specific_functions: true
 
-  # Choose a lower cutoff for the likelihood
-
   likelihood:
     model_invalid_for_lnlike_below: -5e5
     debug: true
 
-    # Set the default output path
-
-  default_output_path: "runs/ColliderBit_Validation_ATLAS_13TeV_MultiLEP_36invfb/"
+  default_output_path: "runs/ColliderBit_Validation_CMS_13TeV_1LEPbb_36invfb/"
