--- a/yaml_files/ColliderBit_Validation_ATLAS_13TeV_MultiLEP_36invfb.yaml
+++ b/yaml_files/ColliderBit_Validation_ATLAS_13TeV_MultiLEP_36invfb.yaml
@@ -231,7 +231,7 @@ Rules:
   - capability:  ColliderOperator
     function: operateLHCLoop
     options:
-      nEvents: [0,1000000]
+      nEvents: [0, 100000]
       pythiaNames: ["Pythia_SUSY_LHC_8TeV", "Pythia_SUSY_LHC_13TeV"]
       silenceLoop: false
 
@@ -246,14 +246,23 @@ Rules:
       ### Pythia_doc_path defaults to the xmldoc directory of the default Pythia
       ###   backend. So, this must only be set if the user chooses a different Pythia.
       #Pythia_doc_path: "Backends/installed/Pythia/8.212/share/Pythia8/xmldoc/"
-      Pythia_SUSY_LHC_8TeV: []
+      Pythia_SUSY_LHC_8TeV: ["Print:quiet = on",
+                             "PartonLevel:MPI = off",
+                             "PartonLevel:ISR = on",
+                             "PartonLevel:FSR = off",
+                             "HadronLevel:all = on",
+                             "SUSY:all = off",
+                             "SUSY:qqbar2chi+-chi0 = on",
+                             "SUSY:idA = 1000023",
+                             "SUSY:idB = 1000024",
+                             "TauDecays:mode = 0"]
       Pythia_SUSY_LHC_13TeV: ["Print:quiet = on",
                              "PartonLevel:MPI = off",
                              "PartonLevel:ISR = on",
                              "PartonLevel:FSR = off",
                              "HadronLevel:all = on",
                              "SUSY:all = off",
-                             "SUSY:qqbar2chi+-chi0 = on"
+                             "SUSY:qqbar2chi+-chi0 = on",
                              "SUSY:idA = 1000023",
                              "SUSY:idB = 1000024",
                              "TauDecays:mode = 0"]
@@ -262,11 +271,7 @@ Rules:
       xsec_vetos: [0.048, 0.075]
 
       # Option needed if you want to use the getPythiaFileReader
-      #SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_200_100.slha"]
-      #SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_400_200.slha"]
-      #SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_500_100.slha"]
-      #SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_300_150.slha"]
-      SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_800_600.slha"]
+      SLHA_filenames: ["ColliderBit/data/ATLAS_13TeV_MultiLEP_36invfb_800_600.slha"] 
 
   # Delphes rules and options (ex. the Delphes configuration card file)
   # NOTE: The use of Delphes currently only works when running with OMP_NUM_THREADS=1
