Changed three SpecBit function names and updated all "downstream" files to match. Specifically, in SpecBit_MSSM.cpp, changed
get_CMSSM_spectrum
get_MSSMatQ_spectrum
get_MSSMatMGUT_spectrum

to

get_CMSSM_spectrum_FS
get_MSSMatQ_spectrum_FS
get_MSSMatMGUT_spectrum_FS

so that function names mirror those ending in _SPheno.

	modified:   DecayBit/examples/3bithit.cpp
	modified:   SpecBit/include/gambit/SpecBit/SpecBit_MSSM_rollcall.hpp
	modified:   SpecBit/src/SpecBit_MSSM.cpp
	modified:   doc/Adding_FlexibleSUSY_Models.txt
	modified:   yaml_files/CMSSM.yaml
	modified:   yaml_files/ColliderBit_CMSSM.yaml
	modified:   yaml_files/DarkBit_MSSM7.yaml
	modified:   yaml_files/DecayBit_MSSM20.yaml
	modified:   yaml_files/FlavBit_CMSSM.yaml
	modified:   yaml_files/MSSM7.yaml
	modified:   yaml_files/NUHM1.yaml
	modified:   yaml_files/NUHM2.yaml
	modified:   yaml_files/PrecisionBit_MSSM20.yaml
	modified:   yaml_files/SpecBit_MSSM.yaml

--- a/yaml_files/DecayBit_MSSM20.yaml
+++ b/yaml_files/DecayBit_MSSM20.yaml
@@ -74,7 +74,7 @@ ObsLikes:
 Rules:
 
   - capability: unimproved_MSSM_spectrum
-    function: get_MSSMatQ_spectrum
+    function: get_MSSMatQ_spectrum_FS
 
   - capability: Higgs_decay_rates
     function: MSSM_h0_1_decays
