Shifted calculation of SM-like Higgs PDG code to a helper function (not a module function). Updated BOSSed backend headers to work with new BACKENDLANG macro, and yaml files to work with new precision Higgs mass dependency tree. 	modified:   Backends/include/gambit/Backends/backend_types/Pythia_8_212/identification.hpp 	modified:   Backends/include/gambit/Backends/backend_types/gm2calc_1_3_0/identification.hpp 	modified:   Backends/include/gambit/Backends/frontends/FeynHiggs_2_11_3.hpp 	modified:   DecayBit/include/gambit/DecayBit/DecayBit_rollcall.hpp 	modified:   DecayBit/src/DecayBit.cpp 	modified:   Elements/CMakeLists.txt 	modified:   PrecisionBit/include/gambit/PrecisionBit/PrecisionBit_rollcall.hpp 	modified:   PrecisionBit/src/PrecisionBit.cpp 	modified:   SpecBit/include/gambit/SpecBit/SpecBit_MSSM_rollcall.hpp 	modified:   SpecBit/src/SpecBit_MSSM.cpp 	modified:   config/capabilities.dat 	modified:   yaml_files/CMSSM.yaml 	modified:   yaml_files/MSSM7.yaml 	modified:   yaml_files/NUHM1.yaml 	modified:   yaml_files/NUHM2.yaml

--- a/Elements/CMakeLists.txt
+++ b/Elements/CMakeLists.txt
@@ -22,6 +22,7 @@ set(source_files src/decay_table.cpp
                  src/mssm_slhahelp.cpp
                  src/slhaea_helpers.cpp
                  src/sminputs.cpp
+                 src/smlike_higgs.cpp
                  src/spectrum.cpp
                  src/subspectrum.cpp
                  src/terminator.cpp
@@ -45,6 +46,7 @@ set(header_files include/gambit/Elements/decay_table.hpp
                  include/gambit/Elements/shared_types.hpp
                  include/gambit/Elements/slhaea_helpers.hpp
                  include/gambit/Elements/sminputs.hpp
+                 include/gambit/Elements/smlike_higgs.hpp
                  include/gambit/Elements/spectrum.hpp
                  include/gambit/Elements/spec_fptrfinder.hpp
                  include/gambit/Elements/spectrum_factories.hpp
