--- a/yaml_files/NUHM2.yaml
+++ b/yaml_files/NUHM2.yaml
@@ -51,7 +51,7 @@ Parameters:
       range: [3.0, 70]
     SignMu: 1
 
-  #Dark matter halo parameters.
+  # Dark matter halo parameters.
   Halo_gNFW_rho0:
     rho0:
       range: [.2, .8]
@@ -366,16 +366,18 @@ Rules:
   # Choose where to get the precision spectrum from
   - capability: MSSM_spectrum
     type: Spectrum
-    function: make_MSSM_precision_spectrum_none
+    #function: make_MSSM_precision_spectrum_none
     #function: make_MSSM_precision_spectrum_W
     #function: make_MSSM_precision_spectrum_H_W
-    # The following options only have an impact when using make_MSSM_precision_spectrum_H_W.
-    # Choose to take FeynHiggs' prediction for the Higgs mass (rather then FlexibleSUSY's).
-    # Choose to use the difference between the FeynHiggs and spectrum generator predictions, along
-    # with the FH error estimate, to estimate the theoretical error on the prediction.
-    #options:
-    #  Higgs_predictions_source: 1
-    #  Higgs_predictions_error_method: 4
+    function: make_MSSM_precision_spectrum_4H_W
+    # The following options only have an impact when using make_MSSM_precision_spectrum_H_W
+    # or make_MSSM_precision_spectrum_H_W.
+    # Choose to take the precision prediction for the Higgs mass(es) (rather then spectrum generator's).
+    # Choose to use the difference between the precision and spectrum generator predictions, along
+    # with the precision error estimate, to estimate the theoretical error on the prediction.
+    options:
+      Higgs_predictions_source: 1
+      Higgs_predictions_error_method: 4
 
   # Make sure to use the next-to-latest version (2.11.3) of FeynHiggs for things that need it,
   # as the latest version (2.12.0) is buggy.
@@ -399,6 +401,11 @@ Rules:
   #- capability: FH_MSSMMasses
   #  backends:
   #  - {backend: FeynHiggs, version: 2.11.3}
+
+  # Choose to get the precision value of the SM-like Higgs mass from FeynHiggs or SUSYHD
+  - capability: prec_mh
+    function: FH_HiggsMass
+    #function: SHD_HiggsMass
 
   # Choose to use functions that get Higgs decays from SUSY-HIT, and t decays from DecayBit native implementation (instead of FeynHiggs)
   - capability: Reference_SM_Higgs_decay_rates
